# SW_PartsDB

./: .gitignore  ADMIN_CREDENTIALS_GUIDE.md  Component_list.csv  DEPLOYMENT_GUIDE.md  DMT_INTEGRATION_GUIDE.md  DMT_Partslib.csv  DOCKER_REFERENCE.md  DS_Resistor_0402.kicad_sym  DS_Resistor_0603.kicad_sym  QUICK_START.md  README.md  R_0402_1005Metric.kicad_mod  SETUP_COMPLETE.md  add_inventory.ps1  config.py  deploy.ps1  deploy.sh  dmt_schema.json  dmt_templates.json  dmtdb.sqlite  dmtdb.sqlite-shm  dmtdb.sqlite-wal  fresh_import.ps1  future  install-service.sh  main.py  package-lock.json  prompt_fix.md  prompt_part3.md  prompt_part4.md  prompt_part5.md  requirements.txt  ruff.toml  start.sh  start_partsdb.ps1  uninstall-service.sh
api/: __init__.py  (+8 more)
partsdb/backend/: Dockerfile  clear_and_import.py  clear_components.py  manage.py  pyproject.toml  requirements.txt
partsdb/backend/apps/core/: models.py  urls.py  views.py
partsdb/backend/apps/eagle/: __init__.py  admin.py  apps.py  models.py  urls.py
partsdb/backend/apps/files/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
partsdb/backend/apps/inventory/: admin.py  apps.py  category_rules.yaml  import_views.py  importers.py  models.py  serializers.py  urls.py  views.py
partsdb/backend/partsdb/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
partsdb/backend/tests/: conftest.py  factories.py  pytest.ini  sample_components.csv  test_health_and_schema.py
partsdb/backend/tests/api/: test_components_api.py
partsdb/backend/tests/files/: test_datasheet_fetch.py
(+382 files in other folders)
